force-app/main/default/objects/lead__c/lead__c.object-meta.xml
<CustomObject>
    <label>clead</label>
    <nameField>
        <label>Lead Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>cleads</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>