force-app/main/default/objects/lead__c/fields/Assignment_Type__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Type__c</fullName>
    <label>Assignment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fresh Assignment</fullName>
            </value>
            <value>
                <fullName>Re-Assignment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>