force-app/main/default/objects/lead__c/fields/Attended__c.field-meta.xml
<CustomField>
    <fullName>Attended__c</fullName>
    <label>Attended By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>