force-app/main/default/objects/lead__c/fields/Attended_By_Sales__c.field-meta.xml
<CustomField>
    <fullName>Attended_By_Sales__c</fullName>
    <label>Attended By Sales</label>
    <type>Email</type>
</CustomField>