force-app/main/default/objects/lead__c/fields/Attended_By_Team__c.field-meta.xml
<CustomField>
    <fullName>Attended_By_Team__c</fullName>
    <label>Attended By Team</label>
    <length>100</length>
    <type>Text</type>
</CustomField>