force-app/main/default/objects/lead__c/fields/BHK__c.field-meta.xml
<CustomField>
    <fullName>BHK__c</fullName>
    <label>Unit Preference</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PLOTS</fullName>
            </value>
            <value>
                <fullName>VILLAS</fullName>
            </value>
            <value>
                <fullName>1 BHK</fullName>
            </value>
            <value>
                <fullName>2 BHK</fullName>
            </value>
            <value>
                <fullName>3 BHK</fullName>
            </value>
            <value>
                <fullName>4 BHK</fullName>
            </value>
            <value>
                <fullName>STUDIO</fullName>
            </value>
            <value>
                <fullName>1.5 BHK</fullName>
            </value>
            <value>
                <fullName>2.5 BHK</fullName>
            </value>
            <value>
                <fullName>3.5 BHK</fullName>
            </value>
            <value>
                <fullName>4.5 BHK</fullName>
            </value>
            <value>
                <fullName>Nill</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>