force-app/main/default/objects/lead__c/fields/Chatbot_Appointment_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Chatbot_Appointment_Scheduled__c</fullName>
    <label>Chatbot Appointment Scheduled</label>
    <length>255</length>
    <type>Text</type>
</CustomField>