force-app/main/default/objects/lead__c/fields/Closed_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Reason__c</fullName>
    <label>Closed Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Budget Issue</fullName>
            </value>
            <value>
                <fullName>Location Issue</fullName>
            </value>
            <value>
                <fullName>Casual Enquiry</fullName>
            </value>
            <value>
                <fullName>Handover timeline</fullName>
            </value>
            <value>
                <fullName>No unit of choice</fullName>
            </value>
            <value>
                <fullName>Dimension not matching</fullName>
            </value>
            <value>
                <fullName>Vaasthu concern</fullName>
            </value>
            <value>
                <fullName>Lack of loan eligibility</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Budget Constraints</fullName>
                <isActive>false</isActive>
                <label>Budget Constraints</label>
            </value>
            <value>
                <fullName>Data of Position</fullName>
                <isActive>false</isActive>
                <label>Data of Position</label>
            </value>
            <value>
                <fullName>Duplicate Lead</fullName>
                <isActive>false</isActive>
                <label>Duplicate Lead</label>
            </value>
            <value>
                <fullName>Feature Project</fullName>
                <isActive>false</isActive>
                <label>Feature Project</label>
            </value>
            <value>
                <fullName>Invalid Contact Number</fullName>
                <isActive>false</isActive>
                <label>Invalid Contact Number</label>
            </value>
            <value>
                <fullName>Junk Enquiry</fullName>
                <isActive>false</isActive>
                <label>Junk Enquiry</label>
            </value>
            <value>
                <fullName>Location Constraints</fullName>
                <isActive>false</isActive>
                <label>Location Constraints</label>
            </value>
            <value>
                <fullName>Not Looking for Property</fullName>
                <isActive>false</isActive>
                <label>Not Looking for Property</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Ready to Move in</fullName>
                <isActive>false</isActive>
                <label>Ready to Move in</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>