force-app/main/default/objects/lead__c/fields/Drop_Off_Reason__c.field-meta.xml
<CustomField>
    <fullName>Drop_Off_Reason__c</fullName>
    <label>Drop Off Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>