force-app/main/default/objects/lead__c/fields/Dropoff_By__c.field-meta.xml
<CustomField>
    <fullName>Dropoff_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dropoff By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>leads</relationshipName>
    <type>Lookup</type>
</CustomField>