force-app/main/default/objects/lead__c/fields/Dropoff_On1__c.field-meta.xml
<CustomField>
    <fullName>Dropoff_On1__c</fullName>
    <label>Dropoff On</label>
    <type>Date</type>
</CustomField>