force-app/main/default/objects/lead__c/fields/First_Approach_On__c.field-meta.xml
<CustomField>
    <fullName>First_Approach_On__c</fullName>
    <label>First Contatced On</label>
    <type>DateTime</type>
</CustomField>