force-app/main/default/objects/lead__c/fields/First_Campaign__c.field-meta.xml
<CustomField>
    <fullName>First_Campaign__c</fullName>
    <label>First Campaign</label>
    <length>220</length>
    <type>Text</type>
</CustomField>