force-app/main/default/objects/lead__c/fields/First_Source_Of_Enquiry__c.field-meta.xml
<CustomField>
    <fullName>First_Source_Of_Enquiry__c</fullName>
    <label>First Source Of Enquiry</label>
    <length>220</length>
    <type>Text</type>
</CustomField>