force-app/main/default/objects/lead__c/fields/Flat_Preference__c.field-meta.xml
<CustomField>
    <fullName>Flat_Preference__c</fullName>
    <label>Flat Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Flat_Preference</valueSetName>
    </valueSet>
</CustomField>