force-app/main/default/objects/lead__c/fields/Followup_Subject__c.field-meta.xml
<CustomField>
    <fullName>Followup_Subject__c</fullName>
    <label>Followup Subject</label>
    <length>220</length>
    <type>Text</type>
</CustomField>