force-app/main/default/objects/lead__c/fields/Interested_Project__c.field-meta.xml
<CustomField>
    <fullName>Interested_Project__c</fullName>
    <label>Interested Project</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Project_Name</valueSetName>
    </valueSet>
</CustomField>