force-app/main/default/objects/lead__c/fields/Last_Campagin__c.field-meta.xml
<CustomField>
    <fullName>Last_Campagin__c</fullName>
    <label>Last Campagin</label>
    <length>220</length>
    <type>Text</type>
</CustomField>