force-app/main/default/objects/lead__c/fields/Last_commented_date__c.field-meta.xml
<CustomField>
    <fullName>Last_commented_date__c</fullName>
    <label>Last commented date</label>
    <type>DateTime</type>
</CustomField>