force-app/main/default/objects/lead__c/fields/Last_commented_date_time__c.field-meta.xml
<CustomField>
    <fullName>Last_commented_date_time__c</fullName>
    <formula>Last_commented_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last commented date time</label>
    <type>DateTime</type>
</CustomField>