force-app/main/default/objects/lead__c/fields/Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Date__c</fullName>
    <formula>DATEVALUE(LastModifiedDate)</formula>
    <label>Last Modified Date</label>
    <type>Date</type>
</CustomField>