force-app/main/default/objects/lead__c/fields/Last_Source_Of_Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Last_Source_Of_Enquiry__c</fullName>
    <label>Last Source Of Enquiry</label>
    <length>220</length>
    <type>Text</type>
</CustomField>