force-app/main/default/objects/lead__c/fields/Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_ID__c</fullName>
    <displayFormat>Ld-{000}</displayFormat>
    <label>Lead ID</label>
    <type>AutoNumber</type>
</CustomField>