force-app/main/default/objects/lead__c/fields/Lead_Owner_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Email_ID__c</fullName>
    <formula>Owner:User.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Owner Email ID</label>
    <type>Text</type>
</CustomField>