force-app/main/default/objects/lead__c/fields/Lead_Owner_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Full_Name__c</fullName>
    <formula>Owner:User.FirstName  + &quot; &quot; + Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Owner Full Name</label>
    <type>Text</type>
</CustomField>