force-app/main/default/objects/lead__c/fields/Lead_status__c.field-meta.xml
<CustomField>
    <fullName>Lead_status__c</fullName>
    <label>Lead status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Qualifed</fullName>
            </value>
            <value>
                <fullName>SV Schedule</fullName>
            </value>
            <value>
                <fullName>Unqualifed</fullName>
            </value>
            <value>
                <fullName>SV Done</fullName>
            </value>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>