force-app/main/default/objects/lead__c/fields/Looking_Villa_for__c.field-meta.xml
<CustomField>
    <fullName>Looking_Villa_for__c</fullName>
    <label>Looking Villa for</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>as_a_family_home</fullName>
                <label>As a family home</label>
            </value>
            <value>
                <fullName>as_investment</fullName>
                <label>As Investment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>