force-app/main/default/objects/lead__c/fields/Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason__c</fullName>
    <label>Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not looking for Property</fullName>
            </value>
            <value>
                <fullName>Junk enquiry</fullName>
            </value>
            <value>
                <fullName>Budget Constraints</fullName>
            </value>
            <value>
                <fullName>Location constrain</fullName>
            </value>
            <value>
                <fullName>Data of Position</fullName>
            </value>
            <value>
                <fullName>Ready to move in</fullName>
            </value>
            <value>
                <fullName>Feature project</fullName>
            </value>
            <value>
                <fullName>Invalid contact number</fullName>
            </value>
            <value>
                <fullName>Project Unfit</fullName>
            </value>
            <value>
                <fullName>Already visited with someone</fullName>
                <isActive>false</isActive>
                <label>Already visited with someone</label>
            </value>
            <value>
                <fullName>Booked with us</fullName>
                <isActive>false</isActive>
                <label>Booked with us</label>
            </value>
            <value>
                <fullName>Budget Unfit</fullName>
                <isActive>false</isActive>
                <label>Budget Unfit</label>
            </value>
            <value>
                <fullName>Budget issue</fullName>
                <isActive>false</isActive>
                <label>Budget issue</label>
            </value>
            <value>
                <fullName>Future</fullName>
                <isActive>false</isActive>
                <label>Future</label>
            </value>
            <value>
                <fullName>Invalid</fullName>
                <isActive>false</isActive>
                <label>Invalid</label>
            </value>
            <value>
                <fullName>Loan Eligibility Unfit</fullName>
                <isActive>false</isActive>
                <label>Loan Eligibility Unfit</label>
            </value>
            <value>
                <fullName>Low Intent to buy</fullName>
                <isActive>false</isActive>
                <label>Low Intent to buy</label>
            </value>
            <value>
                <fullName>Not Enquired</fullName>
                <isActive>false</isActive>
                <label>Not Enquired</label>
            </value>
            <value>
                <fullName>RNR</fullName>
                <isActive>false</isActive>
                <label>RNR</label>
            </value>
            <value>
                <fullName>Visited with us</fullName>
                <isActive>false</isActive>
                <label>Visited with us</label>
            </value>
            <value>
                <fullName>Wrong Number</fullName>
                <isActive>false</isActive>
                <label>Wrong Number</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>