force-app/main/default/objects/lead__c/fields/Main_Lead__c.field-meta.xml
<CustomField>
    <fullName>Main_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Lead</label>
    <referenceTo>lead__c</referenceTo>
    <relationshipLabel>leads</relationshipLabel>
    <relationshipName>leads</relationshipName>
    <type>Lookup</type>
</CustomField>