force-app/main/default/objects/lead__c/fields/Main_lead_status__c.field-meta.xml
<CustomField>
    <fullName>Main_lead_status__c</fullName>
    <formula>TEXT(Main_Lead__r.Lead_status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Main lead status</label>
    <type>Text</type>
</CustomField>