force-app/main/default/objects/lead__c/fields/Main_Pre_Sales_User__c.field-meta.xml
<CustomField>
    <fullName>Main_Pre_Sales_User__c</fullName>
    <formula>Main_Lead__r.Pre_sales_user__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Main Pre Sales User</label>
    <type>Text</type>
</CustomField>