force-app/main/default/objects/lead__c/fields/Maximum_Budget__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Budget__c</fullName>
    <label>Maximum Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>