force-app/main/default/objects/lead__c/fields/Maximum_Investment1__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Investment1__c</fullName>
    <label>Maximum Investment(in Lakhs)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Investment</valueSetName>
    </valueSet>
</CustomField>