force-app/main/default/objects/lead__c/fields/Maximum_Investment_in_Lakhs__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Investment_in_Lakhs__c</fullName>
    <label>Maximum Investment(in Lakhs)</label>
    <length>220</length>
    <type>Text</type>
</CustomField>