force-app/main/default/objects/lead__c/fields/Minimum_Investment_in_Lakhs__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Investment_in_Lakhs__c</fullName>
    <label>Minimum Investment(in Lakhs)</label>
    <length>220</length>
    <type>Text</type>
</CustomField>