force-app/main/default/objects/lead__c/fields/Next_Site_visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Site_visit_Date__c</fullName>
    <label>Site visit Date</label>
    <type>DateTime</type>
</CustomField>