force-app/main/default/objects/lead__c/fields/No_of_Site_Visit__c.field-meta.xml
<CustomField>
    <fullName>No_of_Site_Visit__c</fullName>
    <label>No. of Site Visit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>