force-app/main/default/objects/lead__c/fields/Number_of_Quote__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Quote__c</fullName>
    <label>No. of Quote</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>