force-app/main/default/objects/lead__c/fields/Pre_sales_user__c.field-meta.xml
<CustomField>
    <fullName>Pre_sales_user__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pre sales user</label>
    <referenceTo>User</referenceTo>
    <relationshipName>leads2</relationshipName>
    <type>Lookup</type>
</CustomField>