force-app/main/default/objects/lead__c/fields/Preferred_Villa_Facing__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Villa_Facing__c</fullName>
    <label>Preferred Villa Facing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>