force-app/main/default/objects/lead__c/fields/Proffession__c.field-meta.xml
<CustomField>
    <fullName>Proffession__c</fullName>
    <label>Proffession</label>
    <length>255</length>
    <type>Text</type>
</CustomField>