force-app/main/default/objects/lead__c/fields/Pushed_By__c.field-meta.xml
<CustomField>
    <fullName>Pushed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pushed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>leads5</relationshipName>
    <type>Lookup</type>
</CustomField>