force-app/main/default/objects/lead__c/fields/Pushed_On__c.field-meta.xml
<CustomField>
    <fullName>Pushed_On__c</fullName>
    <label>Pushed On</label>
    <type>DateTime</type>
</CustomField>