force-app/main/default/objects/lead__c/fields/Re_engaged_Count__c.field-meta.xml
<CustomField>
    <fullName>Re_engaged_Count__c</fullName>
    <label>Re-engaged Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>