force-app/main/default/objects/lead__c/fields/Re_Engaged_Date__c.field-meta.xml
<CustomField>
    <fullName>Re_Engaged_Date__c</fullName>
    <label>Last Re-Engaged Date</label>
    <type>DateTime</type>
</CustomField>