force-app/main/default/objects/lead__c/fields/Reassigned_Hr__c.field-meta.xml
<CustomField>
    <fullName>Reassigned_Hr__c</fullName>
    <formula>TEXT(FLOOR((NOW() - Re_assigned_date__c)*24))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reassigned Hr</label>
    <type>Text</type>
</CustomField>