force-app/main/default/objects/lead__c/fields/Reassigned_Hr_Count__c.field-meta.xml
<CustomField>
    <fullName>Reassigned_Hr_Count__c</fullName>
    <formula>value( Reassigned_Hr__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reassigned Hr Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>