force-app/main/default/objects/lead__c/fields/Remark_for_In_Process__c.field-meta.xml
<CustomField>
    <fullName>Remark_for_In_Process__c</fullName>
    <label>Remark for In Process</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>