force-app/main/default/objects/lead__c/fields/Remark_for_Non_Contactable__c.field-meta.xml
<CustomField>
    <fullName>Remark_for_Non_Contactable__c</fullName>
    <label>Remark for Non Contactable</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>