force-app/main/default/objects/lead__c/fields/Remark_for_SV_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Remark_for_SV_Confirmed__c</fullName>
    <label>Remark for SV Confirmed</label>
    <type>TextArea</type>
</CustomField>