force-app/main/default/objects/lead__c/fields/Remark_for_SV_Done__c.field-meta.xml
<CustomField>
    <fullName>Remark_for_SV_Done__c</fullName>
    <label>Remark for SV Done</label>
    <type>TextArea</type>
</CustomField>