force-app/main/default/objects/lead__c/fields/Remark_for_SV_Proposed__c.field-meta.xml
<CustomField>
    <fullName>Remark_for_SV_Proposed__c</fullName>
    <label>Remark for SV Proposed</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>