force-app/main/default/objects/lead__c/fields/Residential_Address__c.field-meta.xml
<CustomField>
    <fullName>Residential_Address__c</fullName>
    <label>Residential Address</label>
    <type>TextArea</type>
</CustomField>