force-app/main/default/objects/lead__c/fields/Residential_Place__c.field-meta.xml
<CustomField>
    <fullName>Residential_Place__c</fullName>
    <label>Residential Place</label>
    <length>255</length>
    <type>Text</type>
</CustomField>