force-app/main/default/objects/lead__c/fields/RNR_hr__c.field-meta.xml
<CustomField>
    <fullName>RNR_hr__c</fullName>
    <formula>TEXT(FLOOR((NOW() - RNR_Date__c)*24))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RNR hr</label>
    <type>Text</type>
</CustomField>