force-app/main/default/objects/lead__c/fields/RNR_hr_count__c.field-meta.xml
<CustomField>
    <fullName>RNR_hr_count__c</fullName>
    <formula>Value(RNR_hr__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RNR hr count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>