force-app/main/default/objects/lead__c/fields/Store_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Store_Created_Date__c</fullName>
    <formula>DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Store Created Date</label>
    <type>Date</type>
</CustomField>