force-app/main/default/objects/lead__c/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Lead_status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Need Time</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>On Scheduled</fullName>
            </value>
            <value>
                <fullName>Non-Responsive</fullName>
            </value>
            <value>
                <fullName>Rescheduled</fullName>
            </value>
            <value>
                <fullName>Dropped</fullName>
            </value>
            <value>
                <fullName>Needs Time</fullName>
            </value>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Budget Unfit</fullName>
            </value>
            <value>
                <fullName>Loan Eligibility Unfit</fullName>
            </value>
            <value>
                <fullName>Low Intent to buy</fullName>
            </value>
            <value>
                <fullName>Not Enquired</fullName>
            </value>
            <value>
                <fullName>Project Unfit</fullName>
            </value>
            <value>
                <fullName>RNR</fullName>
            </value>
            <value>
                <fullName>Wrong Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>