force-app/main/default/objects/lead__c/fields/SV_Schedule_Date__c.field-meta.xml
<CustomField>
    <fullName>SV_Schedule_Date__c</fullName>
    <label>SV Schedule Date</label>
    <type>DateTime</type>
</CustomField>